--- a/ThemeCreative/src/plugin.yml
+++ b/ThemeCreative/src/plugin.yml
@@ -16,3 +16,6 @@ permissions:
     theme.admin.create:
         default: op
         description: Allow create the new theme
+    theme.admin.select:
+        default: op
+        description: Allow select the theme
