major updates/change namespaces/ checkpoint

--- a/ProjectManager/src/config.yml
+++ b/ProjectManager/src/config.yml
@@ -5,8 +5,7 @@
 #==================#
 #   Basic Config   #
 #==================#
-# ProjectManager World
-WorldName: 'theme_build'
+# No Configables Found!
 
 #==================#
 #   DO NOT TOUCH   #
