Add CreativeWorld configuration

--- a/ProjectManager/src/config.yml
+++ b/ProjectManager/src/config.yml
@@ -5,7 +5,8 @@
 #==================#
 #   Basic Config   #
 #==================#
-# No Configables Found!
+CreativeWorlds:
+- theme_build
 
 #==================#
 #   DO NOT TOUCH   #
