--- a/ProjectManager/src/plugin.yml
+++ b/ProjectManager/src/plugin.yml
@@ -1,6 +1,6 @@
 ##  Plugin Information  ##
 name: ProjectManager
-version: 0.1
+version: 0.2
 main: syam.ProjectManager.ProjectManager
 description: ProjectManager Plugin for SakuraServer
 website: http://sakura-server.net/
@@ -19,6 +19,9 @@ permissions:
     pm.admin.delete:
         default: op
         description: Allow delete the project
+    pm.admin.reload:
+        default: op
+        description: Allow reload the plugin config.yml
     pm.admin.editAllProject:
         default: op
         description: Allow management all project
