--- a/ProjectManager/src/plugin.yml
+++ b/ProjectManager/src/plugin.yml
@@ -4,7 +4,7 @@ version: 0.2
 main: syam.ProjectManager.ProjectManager
 description: ProjectManager Plugin for SakuraServer
 website: http://sakura-server.net/
-#softdepend: [WorldEdit]
+depend: [WorldEdit]
 ##  Original Author     ##
 author: syam
 commands:
